--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,10 +13,26 @@ elseif(MSVC)
     add_compile_options(/W4)
 endif()
 
-find_package(OpenCV REQUIRED)
+# --- START OF FIX ---
 
-# Include header files
+# Find the specific OpenCV components we need
+find_package(OpenCV REQUIRED COMPONENTS
+    core         # For cv::Mat, cv::KeyPoint
+    features2d   # For cv::FAST
+    imgproc      # For cv::drawKeypoints, cvRound
+    highgui      # For cv::imshow, cv::waitKey
+    imgcodecs    # For cv::imread
+)
+
+# Include your local header files ("include/orb.hpp")
 include_directories(include)
+
+# !! THIS IS THE MISSING LINE !!
+# Add the OpenCV header file directories to the compiler path
+include_directories(${OpenCV_INCLUDE_DIRS})
+
+# --- END OF FIX ---
+
 
 # Create executable from source files
 add_executable(orb_demo
@@ -25,4 +41,5 @@ add_executable(orb_demo
 )
 
 # Link libraries
+# ${OpenCV_LIBS} will now contain all the components we found
 target_link_libraries(orb_demo PRIVATE ${OpenCV_LIBS})
