Functional comparison!!! main.cpp is 100% ai, but it seems to validate my human ORB code works when I turn my nose up at it.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ find_package(OpenCV REQUIRED COMPONENTS
     imgproc      # For cv::drawKeypoints, cvRound
     highgui      # For cv::imshow, cv::waitKey
     imgcodecs    # For cv::imread
+    videoio      # For cv::VideoCapture
 )
 
 # Include your local header files ("include/orb.hpp")
